Fixed the gap on mobile devices (left side)
Removed padding from section

--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,7 @@ body {
 
 section {
   max-width: 100%;
-  padding: 80px;
+  padding: 0;
   margin: 0 auto;
 }
 
